[gd_scene load_steps=3 format=3 uid="uid://dcbujli04jyj2"]

[ext_resource type="Script" path="res://addons/godaemon_multiplayer/services/replication/editor/replication_editor.gd" id="1_om8ea"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dqqmy"]

[node name="ReplicationEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_om8ea")

[node name="Header" type="Control" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="Left" type="HBoxContainer" parent="Header"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 111.0
grow_vertical = 2
theme_override_constants/separation = 7

[node name="AddPropertyButton" type="Button" parent="Header/Left"]
unique_name_in_owner = true
layout_mode = 2
text = "Replicate Property for:"

[node name="NodeLabel" type="Button" parent="Header/Left"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(0.783523, 0.783523, 0.783523, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_dqqmy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dqqmy")
disabled = true
text = "Button"

[node name="Right" type="HBoxContainer" parent="Header"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="SceneReplicateButton" type="CheckBox" parent="Header/Right"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "When active, this scene is marked as a replicated scene.
A replicated scene on the server can be automatically created on the client using the ReplicationService.

Replication filtering is done via the sender/receiver configurations:
- Client + Server: Property is replicated from or sent to all clients and server.
- Owner + Server: Property is replicated from or sent to the owner and the server.
- Server Only: Property is replicated from or sent to the server only.

Additionally, the SyncService will sync properties according to the sync setting:
- Once: Property is only replicated on scene creation.
- Always: Whenever a sender updates the property, it is communicated to other receivers.
- Smooth: Same as above, but receivers interpolate the received value at a fixed tickrate."
text = "Replicated Scene"

[node name="ReloadButton" type="Button" parent="Header/Right"]
unique_name_in_owner = true
layout_mode = 2
text = "Reload"

[node name="TreeContainer" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="UnselectedLabel" type="Label" parent="TreeContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Select a Node to edit its replication properties."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PropertyTree" type="Tree" parent="TreeContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
columns = 6
column_titles_visible = true
hide_root = true
